--- a/src/Pages/Login/Login.css
+++ b/src/Pages/Login/Login.css
@@ -1,120 +1,78 @@
+body {
+    --black: #000000;
+    --ash-black: #222;
+    --white: #fafafa;
+    --sky: #00ccff;
+    --green: #22dddd;
+    --blue: #1300ff;
+    --dusk: #6600ff;
+    --purple: #9900ff;
+    --pink: #ff0066;
+    --red: #fe0222;
+    --orange: #fd7702;
+    --yellow: #ffbb00;
+  
+    --background: var(--purple);
+    --accent: var(--white);
+  
+    margin: 0;
+    padding: 0;
+    background-color: var(--background);
+    color: var(--accent);
+    padding-bottom: 100px;
+    overflow: hidden;
+  }
+  
+  #root {
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  
+  * {
+    font-weight: 400;
+    font-style: normal;
+    -webkit-font-smoothing: antialiased;
+  }
+
 .container{
     display: block;
     align-items: center;
     justify-content: center;
+    /* background-color: #181818; */
+    background-image: url();
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
-.heading {
-    display: block;
-    font-size: 40px;
-    font-weight: 600;
-    color: #2c444e;
-    position: relative;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.heading::after {
-    content: "";
-    width: 450px;
-    height: 4px;
-    border-radius: 1px;
-    bottom: -20px;
-    background-color: #2c444e;
-    position: absolute;
-}
 
 .form_container {
     display: flex;
-    margin-top: 45px;
-    width: 800px;
-    height: 450px;
-    background-color: white;
-    box-shadow: 3px 4px 36px -6px rgba(0,0,0,0.4);
-    border-radius: 50px;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-.left {
-    flex: 1.5;
-    overflow: hidden;
-    position: relative;
-    border-top-left-radius: 50px;
-    border-bottom-left-radius: 50px;
-}
-
-.img {
-    width: 160%;
-    position: absolute;
-    left: -150px;
-    top: -50px;
-}
-
-.right {
-    flex: 2;
-    display: flex;
-    flex-direction: column;
+    width: 100vw;
+    height: 10%;
+    margin: 25% auto;
     align-items: center;
     justify-content: center;
+    background: none;
 }
 
-.from_heading {
-    font-size: 25px;
-    font-weight: 400;
-    color: #2c444e;
-    margin-bottom: 30px;
-}
-
-.input {
-    width: 320px;
-    height: 35px;
-    padding: 5px;
-    margin: 5px 0;
-    outline: none;
-    border: 1px solid #2c444e;
-    border-radius: 2px;
-    font-size: 13px;
-}
-
-.btn {
-    font-size: 18px;
-    font-weight: 500;
-    padding: 12px 25px;
-    color: white;
-    background-color: #ffc801;
-    border-radius: 12px;
-    margin: 10px 0 0 0;
-    outline: none;
-    border: none;
-    cursor: pointer;
-}
-
-.text {
-    font-size: 14px;
-    color: #2c444e;
-    margin: 5px 0;
-    padding: 0;
-}
-
-.text > a{
-    font-size: 16px;
-    font-weight: 500;
-    color: #ffc801;
-}
 
 .google_btn {
-    width: 230px;
-    height: 40px;
+    width: 20rem;
+    height: 3rem;
     border-radius: 5px;
     border: none;
     outline: none;
     background-color: white;
     box-shadow: rgb(0 0 0 / 20%) 0px 3px 1px -2px, rgb(0 0 0 / 14%) 0px 2px 2px 0px, rgb(0 0 0 / 12%) 0px 1px 5px 0px;
-    font-size: 16px;
+    font-size: 1rem;
     font-weight: 500;
-    margin: 0 0 20px 0;
+    margin: 0;
     color: #2c444e;
     cursor: pointer;
     display: flex;
@@ -124,11 +82,11 @@
 }
 
 .google_btn > img{
-    width: 30px;
-    height: 30px;
+    width: 3rem;
+    height: 3rem;
     object-fit: cover;
 }
 
 .google_btn > span{
-    margin-left: 10px;
+    margin-left: 1rem;
 }
