--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,7 @@ body{
   padding: 0;
   font-family: 'Poppins', sans-serif;
   /* font-family: 'Kanit', sans-serif; */
+  z-index: -3;
 }
 
 .container{
